--- a/app/global.scss
+++ b/app/global.scss
@@ -7,8 +7,8 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Dank Mono', SFMono-Regular, Consolas, 'Liberation Mono', Menlo,
-    Courier, monospace;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 21px;
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
