Add Cart and thankyou

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,5 +1,5 @@
 .header {
-  nav {
+  .nav {
     background-color: rgb(67, 85, 121);
     border-radius: 10px;
     margin: 40px 0;
@@ -28,5 +28,4 @@
   margin-top: 20px;
   padding: 15px;
   border-top: 2px solid var(--main-bg-color);
-  color: white;
 }
