--- a/app/global.scss
+++ b/app/global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;700&family=Tilt+Neon&display=swap');
+
 *,
 *::before,
 *::after {
@@ -7,8 +9,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Space Grotesk', sans-serif;
   font-size: 21px;
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
