--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,31 +1,31 @@
-.header {
-  .nav {
-    background-color: rgb(67, 85, 121);
-    border-radius: 10px;
-    margin: 40px 0;
-    padding: 15px;
-    display: flex;
+// .header {
+//   .nav {
+//     background-color: rgb(67, 85, 121);
+//     border-radius: 10px;
+//     margin: 40px 0;
+//     padding: 15px;
+//     display: flex;
 
-    & a + a,
-    span + a {
-      margin-left: 25px;
-      color: white;
-    }
+//     & a + a,
+//     span + a {
+//       margin-left: 25px;
+//       color: white;
+//     }
 
-    & div {
-      margin-right: auto;
-      display: flex;
-      gap: 20px;
-    }
-  }
-}
+//     & div {
+//       margin-right: auto;
+//       display: flex;
+//       gap: 20px;
+//     }
+//   }
+// }
 
-.footer {
-  background-color: rgb(67, 85, 121);
-  border-radius: 6px;
-  margin: 20px 0;
-  display: flex;
-  margin-top: 20px;
-  padding: 15px;
-  border-top: 2px solid var(--main-bg-color);
-}
+// .footer {
+//   background-color: rgb(67, 85, 121);
+//   border-radius: 6px;
+//   margin: 20px 0;
+//   display: flex;
+//   margin-top: 20px;
+//   padding: 15px;
+//   border-top: 2px solid var(--main-bg-color);
+// }
